@@ -3,12 +3,11 @@ package dk.viplev.agent.domain.services;
 import dk.viplev.agent.domain.exception.ContainerRuntimeException;
 import dk.viplev.agent.domain.exception.ViplevApiException;
 import dk.viplev.agent.domain.model.ContainerInfo;
-import dk.viplev.agent.generated.model.ServiceDTO;
+import dk.viplev.agent.domain.model.NodeInfo;
 import dk.viplev.agent.generated.model.ServiceRegistrationDTO;
 import dk.viplev.agent.port.outbound.container.ContainerPort;
-import dk.viplev.agent.port.outbound.host.HostInfoProvider;
+import dk.viplev.agent.port.outbound.discovery.NodeDiscoveryPort;
 import dk.viplev.agent.port.outbound.rest.ViplevApiPort;
-import dk.viplev.agent.generated.model.HostDTO;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -34,19 +33,17 @@ class ServiceDiscoveryServiceImplTest {
     private ViplevApiPort viplevApiPort;
 
     @Mock
-    private HostInfoProvider hostInfoProvider;
+    private NodeDiscoveryPort nodeDiscoveryPort;
 
     private ServiceDiscoveryServiceImpl service;
 
-    private final HostDTO testHost = new HostDTO()
-            .name("test-host")
-            .machineId("abc123")
-            .ipAddress("192.168.1.1")
-            .os("Linux");
+    private final NodeInfo testNode = new NodeInfo(
+            "daemon-id-abc123", "test-host", "192.168.1.1",
+            "Linux", "5.15.0", 8, 16_000_000_000L);
 
     @BeforeEach
     void setUp() {
-        service = new ServiceDiscoveryServiceImpl(containerPort, viplevApiPort, hostInfoProvider);
+        service = new ServiceDiscoveryServiceImpl(containerPort, viplevApiPort, nodeDiscoveryPort);
     }
 
     @Test
@@ -58,7 +55,8 @@ class ServiceDiscoveryServiceImplTest {
                         null, null, null, null)
         );
         when(containerPort.listContainers()).thenReturn(containers);
-        when(hostInfoProvider.getHostInfo()).thenReturn(testHost);
+        when(nodeDiscoveryPort.discoverNodes()).thenReturn(List.of(testNode));
+        when(nodeDiscoveryPort.getLocalNodeId()).thenReturn("daemon-id-abc123");
 
         service.syncServices();
 
@@ -66,17 +64,43 @@ class ServiceDiscoveryServiceImplTest {
         verify(viplevApiPort).registerServices(captor.capture());
 
         var registration = captor.getValue();
-        assertThat(registration.getHost()).isEqualTo(testHost);
-        assertThat(registration.getServices()).hasSize(2);
+        assertThat(registration.getHosts()).hasSize(1);
 
-        var nginx = registration.getServices().get(0);
-        assertThat(nginx.getServiceName()).isEqualTo("nginx");
-        assertThat(nginx.getImageName()).isEqualTo("nginx:latest");
-        assertThat(nginx.getImageSha()).isEqualTo("sha256:aaa");
+        var hostEntry = registration.getHosts().getFirst();
+        assertThat(hostEntry.getHost().getMachineId()).isEqualTo("daemon-id-abc123");
+        assertThat(hostEntry.getHost().getName()).isEqualTo("test-host");
+        assertThat(hostEntry.getHost().getIpAddress()).isEqualTo("192.168.1.1");
+        assertThat(hostEntry.getHost().getOs()).isEqualTo("Linux");
+        assertThat(hostEntry.getHost().getCpuCores()).isNull();
+        assertThat(hostEntry.getHost().getCpuThreads()).isEqualTo(8);
+        assertThat(hostEntry.getHost().getRamTotalBytes()).isEqualTo(16_000_000_000L);
+        assertThat(hostEntry.getServices()).hasSize(2);
 
-        var redis = registration.getServices().get(1);
-        assertThat(redis.getServiceName()).isEqualTo("redis");
-        assertThat(redis.getImageName()).isEqualTo("redis:7");
+        assertThat(hostEntry.getServices().get(0).getServiceName()).isEqualTo("nginx");
+        assertThat(hostEntry.getServices().get(0).getImageName()).isEqualTo("nginx:latest");
+        assertThat(hostEntry.getServices().get(0).getImageSha()).isEqualTo("sha256:aaa");
+        assertThat(hostEntry.getServices().get(1).getServiceName()).isEqualTo("redis");
+    }
+
+    @Test
+    void syncServices_multipleNodes_onlyLocalNodeGetsServices() {
+        var node2 = new NodeInfo("daemon-id-xyz", "node2", "192.168.1.2", "Linux", "5.15.0", 4, 8_000_000_000L);
+        when(containerPort.listContainers()).thenReturn(List.of(
+                new ContainerInfo("id1", "nginx", "nginx:latest", "sha256:aaa", "running", null, null, null, null)));
+        when(nodeDiscoveryPort.discoverNodes()).thenReturn(List.of(testNode, node2));
+        when(nodeDiscoveryPort.getLocalNodeId()).thenReturn("daemon-id-abc123");
+
+        service.syncServices();
+
+        var captor = ArgumentCaptor.forClass(ServiceRegistrationDTO.class);
+        verify(viplevApiPort).registerServices(captor.capture());
+
+        var hosts = captor.getValue().getHosts();
+        assertThat(hosts).hasSize(2);
+        assertThat(hosts.get(0).getHost().getMachineId()).isEqualTo("daemon-id-abc123");
+        assertThat(hosts.get(1).getHost().getMachineId()).isEqualTo("daemon-id-xyz");
+        assertThat(hosts.get(0).getServices()).hasSize(1);
+        assertThat(hosts.get(1).getServices()).isEmpty();
     }
 
     @Test
@@ -84,15 +108,15 @@ class ServiceDiscoveryServiceImplTest {
         var container = new ContainerInfo("id1", "app", "app:1", "sha256:ccc", "running",
                 2_000_000_000L, null, null, null);
         when(containerPort.listContainers()).thenReturn(List.of(container));
-        when(hostInfoProvider.getHostInfo()).thenReturn(testHost);
+        when(nodeDiscoveryPort.discoverNodes()).thenReturn(List.of(testNode));
+        when(nodeDiscoveryPort.getLocalNodeId()).thenReturn("daemon-id-abc123");
 
         service.syncServices();
 
         var captor = ArgumentCaptor.forClass(ServiceRegistrationDTO.class);
         verify(viplevApiPort).registerServices(captor.capture());
 
-        ServiceDTO dto = captor.getValue().getServices().get(0);
-        assertThat(dto.getCpuLimit()).isEqualTo(2.0);
+        assertThat(captor.getValue().getHosts().getFirst().getServices().get(0).getCpuLimit()).isEqualTo(2.0);
     }
 
     @Test
@@ -100,15 +124,15 @@ class ServiceDiscoveryServiceImplTest {
         var container = new ContainerInfo("id1", "app", "app:1", "sha256:ccc", "running",
                 null, 1024L, null, null);
         when(containerPort.listContainers()).thenReturn(List.of(container));
-        when(hostInfoProvider.getHostInfo()).thenReturn(testHost);
+        when(nodeDiscoveryPort.discoverNodes()).thenReturn(List.of(testNode));
+        when(nodeDiscoveryPort.getLocalNodeId()).thenReturn("daemon-id-abc123");
 
         service.syncServices();
 
         var captor = ArgumentCaptor.forClass(ServiceRegistrationDTO.class);
         verify(viplevApiPort).registerServices(captor.capture());
 
-        ServiceDTO dto = captor.getValue().getServices().get(0);
-        assertThat(dto.getCpuReservation()).isEqualTo(1.0);
+        assertThat(captor.getValue().getHosts().getFirst().getServices().get(0).getCpuReservation()).isEqualTo(1.0);
     }
 
     @Test
@@ -116,14 +140,15 @@ class ServiceDiscoveryServiceImplTest {
         var container = new ContainerInfo("id1", "app", "app:1", "sha256:ccc", "running",
                 null, null, null, null);
         when(containerPort.listContainers()).thenReturn(List.of(container));
-        when(hostInfoProvider.getHostInfo()).thenReturn(testHost);
+        when(nodeDiscoveryPort.discoverNodes()).thenReturn(List.of(testNode));
+        when(nodeDiscoveryPort.getLocalNodeId()).thenReturn("daemon-id-abc123");
 
         service.syncServices();
 
         var captor = ArgumentCaptor.forClass(ServiceRegistrationDTO.class);
         verify(viplevApiPort).registerServices(captor.capture());
 
-        ServiceDTO dto = captor.getValue().getServices().get(0);
+        var dto = captor.getValue().getHosts().getFirst().getServices().get(0);
         assertThat(dto.getCpuLimit()).isNull();
         assertThat(dto.getCpuReservation()).isNull();
         assertThat(dto.getMemoryLimitBytes()).isNull();
@@ -131,17 +156,17 @@ class ServiceDiscoveryServiceImplTest {
     }
 
     @Test
-    void syncServices_emptyContainerList_registersHostOnly() {
+    void syncServices_emptyNodeList_registersEmptyHosts() {
         when(containerPort.listContainers()).thenReturn(List.of());
-        when(hostInfoProvider.getHostInfo()).thenReturn(testHost);
+        when(nodeDiscoveryPort.discoverNodes()).thenReturn(List.of());
+        when(nodeDiscoveryPort.getLocalNodeId()).thenReturn("daemon-id-abc123");
 
         service.syncServices();
 
         var captor = ArgumentCaptor.forClass(ServiceRegistrationDTO.class);
         verify(viplevApiPort).registerServices(captor.capture());
 
-        assertThat(captor.getValue().getHost()).isEqualTo(testHost);
-        assertThat(captor.getValue().getServices()).isEmpty();
+        assertThat(captor.getValue().getHosts()).isEmpty();
     }
 
     @Test
@@ -155,7 +180,8 @@ class ServiceDiscoveryServiceImplTest {
     @Test
     void syncServices_propagatesApiException() {
         when(containerPort.listContainers()).thenReturn(List.of());
-        when(hostInfoProvider.getHostInfo()).thenReturn(testHost);
+        when(nodeDiscoveryPort.discoverNodes()).thenReturn(List.of(testNode));
+        when(nodeDiscoveryPort.getLocalNodeId()).thenReturn("daemon-id-abc123");
         doThrow(new ViplevApiException("API error", 500))
                 .when(viplevApiPort).registerServices(org.mockito.ArgumentMatchers.any());
 
